# SLHAv2

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FINDINGS.md  LICENSE-APACHE  LICENSE-MIT  LICENSING.md  Makefile  PLAN.md  README.md  SLHAv2.md  demo.sh  install.sh
.github/workflows/: ci.yml
benches/: score.rs
docs/: GETTING_STARTED.md  INTEGRATION.md  MCP.md  SLHAv2_schema_plan.py  SUCCESS_CRITERIA.md  api.md
examples/: basic_usage.rs
paper/: .gitignore  README.md  slhav2.tex
scirust/: Cargo.toml  README.md  build.rs
scirust/benches/: kernel.rs
scirust/examples/: attention_fidelity.rs  bench_vs_fp16.rs  benchmark_decode.rs  calibrate_lambda.rs  ccos_softpaging.rs  cycles.rs  hadamard_incoherence.rs  informed_eviction.rs  learn_projection.rs  measure.rs  measure_learned.rs  multibit_residual.rs  offline_validation.rs  platform_report.rs  pre_rope_projection.rs  salient_outliers.rs  train_on_real_activations.rs
scirust/src/: adapter.rs  audit.rs  ccos.rs  incoherence.rs  json.rs  learned.rs  lib.rs  linalg.rs  metrics.rs  numa.rs  residual.rs  rng.rs  rope.rs  safety.rs  scenario.rs  weights.rs
scirust/src/attention/: mod.rs  slha_v2.rs
scirust/tests/: calibration.rs  ccos.rs  numa.rs  properties.rs  safety.rs  slha.rs
scripts/: bench_device.sh  dump_activations.py  stress_test.sh
slha-c/: Cargo.toml
slha-c/include/: slha.h
slha-c/src/: lib.rs
slha-mcp/: Cargo.toml
slha-mcp/src/: main.rs
slha-python/: Cargo.toml  pyproject.toml
slha-python/src/: lib.rs
