# Cargo workspace. The real crate lives in `scirust/`; this root manifest lets
# `cargo build / test / clippy / bench` run from the repo root and operate on it.
#
# (This replaces a previous *second* `scirust` package declared here, whose
#  bench and docs referenced a non-existent API — see CHANGELOG. A virtual
#  workspace removes the duplication and keeps a single source of truth.)
[workspace]
resolver = "2"
members = ["scirust", "slha-mcp"]
# So root-level `cargo build / test / bench / run --example` target the scirust
# crate without `-p` (the installer, Makefile and demo.sh rely on this).
default-members = ["scirust"]

# Release profile lives at the workspace root (a member's [profile] is ignored).
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
license = "LicenseRef-CheckupAuto-Dual"
