[package]
name = "scirust"
version = "0.2.0"
edition = "2021"
authors = ["Forge CHECKUPAUTO <forge@checkupauto.io>"]
description = "SLHA v2 reference kernel: sub-low-rank latent + 1-bit residual hybrid attention, cache-line-aware tiling."
license = "MIT OR Apache-2.0"
repository = "https://github.com/CHECKUPAUTO/SLHAv2"

[lib]
name = "scirust"
path = "src/lib.rs"

# The library itself has ZERO external dependencies (it builds offline and adds
# nothing to a consumer's tree). The only dev-dependency is a *lean* criterion
# (no plotters/rayon/html) used solely by `cargo bench`.
[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "kernel"
harness = false
