[package]
name = "scirust"
version = "0.2.0"
edition = "2021"
rust-version = "1.89"
authors = ["Forge CHECKUPAUTO <forge@checkupauto.io>"]
description = "SLHA v2 reference kernel: sub-low-rank latent + 1-bit residual hybrid attention, cache-line-aware tiling."
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/CHECKUPAUTO/SLHAv2"
homepage = "https://github.com/CHECKUPAUTO/SLHAv2"
documentation = "https://docs.rs/scirust"
readme = "README.md"
keywords = ["llm", "kv-cache", "attention", "quantization", "simd"]
categories = ["algorithms", "science", "compression"]
# MSRV is 1.89: the runtime-dispatched AVX-512 intrinsics (stdarch_x86_avx512)
# stabilized in 1.89, and `usize::is_multiple_of` in 1.87.

[lib]
name = "scirust"
path = "src/lib.rs"

# Dedicated self-audit CLI: `cargo run --bin slha-audit -- [--json|--pretty]`.
# Reuses the in-crate `audit` + `json` modules (no extra deps).
[[bin]]
name = "slha-audit"
path = "src/bin/slha_audit.rs"

# The library itself has ZERO external dependencies (it builds offline and adds
# nothing to a consumer's tree). It ships a tiny, std-only `build.rs` that probes
# the native host's cache-line size to choose the tile alignment — it pulls in no
# crates and is a no-op under cross-compilation. The only dev-dependency is a
# *lean* criterion (no plotters/rayon/html) used solely by `cargo bench`.
[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "kernel"
harness = false
