[package]
name = "slha-c"
version = "0.2.0"
edition = "2021"
rust-version = "1.89"
authors = ["Forge CHECKUPAUTO <forge@checkupauto.io>"]
description = "C-ABI interface for SLHA v2 kernel."
license = "MIT OR Apache-2.0"

[lib]
name = "slha"
crate-type = ["cdylib", "staticlib"]

[dependencies]
scirust = { version = "0.2", path = "../scirust" }
